--- a/index.html
+++ b/index.html
@@ -71,6 +71,15 @@
     .fc .busy-other .fc-event-title,
     .fc .busy-other .fc-event-time{ display: none !important; }
     .fc .mine-event{ font-weight: 600; }
+
+    /* 自分の予約一覧 */
+    .myCard{
+      border:1px solid #eee; border-radius:12px; padding:10px;
+      background:#fff;
+    }
+    .myCardTitle{font-size:14px;}
+    .myCardActions{margin-top:8px; display:flex; justify-content:flex-end;}
+    .myCardActions button{padding:8px 10px; font-size:14px;}
   </style>
 
   <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
@@ -98,11 +107,12 @@
   </div>
 
   <div id="calendar"></div>
-<!-- 自分の予約一覧（カレンダー下） -->
-<div id="myList" style="margin-top:12px;">
-  <h3 style="margin:10px 0 6px 0; font-size:16px;">自分の予約一覧</h3>
-  <div id="myListBody" class="small">読み込み中…</div>
-</div>
+
+  <!-- ✅ 自分の予約一覧（カレンダー下） -->
+  <div id="myList" style="margin-top:12px;">
+    <h3 style="margin:10px 0 6px 0; font-size:16px;">自分の予約一覧（表示中の期間）</h3>
+    <div id="myListBody" class="small">読み込み中…</div>
+  </div>
 
   <!-- 予約モーダル -->
   <div id="overlay" class="overlay">
@@ -129,83 +139,6 @@
         <button id="saveModalBtn">予約する</button>
       </div>
     </div>
-    function fmtDateYmd(d){
-  return `${d.getFullYear()}-${String(d.getMonth()+1).padStart(2,"0")}-${String(d.getDate()).padStart(2,"0")}`;
-}
-function fmtTimeHM(d){
-  return `${String(d.getHours()).padStart(2,"0")}:${String(d.getMinutes()).padStart(2,"0")}`;
-}
-
-function renderMyReservations(data){
-  const el = $("myListBody");
-  if(!el) return;
-
-  // 今表示している期間のうち「自分の予約」だけ
-  const mine = (data || [])
-    .filter(r => r.user_id === me.userId)
-    .map(r => ({
-      id: r.id,
-      start: new Date(r.start_time),
-      end: new Date(r.end_time),
-      note: (r.note || "").trim()
-    }))
-    .sort((a,b)=>a.start - b.start);
-
-  if(mine.length === 0){
-    el.textContent = "この期間の予約はありません。";
-    return;
-  }
-
-  const carName = getSelectedCarName();
-
-  el.innerHTML = `
-    <div style="display:flex; flex-direction:column; gap:8px;">
-      ${mine.map(item=>{
-        const ymd = fmtDateYmd(item.start);
-        const s = fmtTimeHM(item.start);
-        const e = fmtTimeHM(item.end);
-        const note = item.note ? `（${escapeHtml(item.note)}）` : "";
-        return `
-          <div style="border:1px solid #eee; border-radius:12px; padding:10px;">
-            <div style="font-size:14px;"><b>${ymd}</b> ${s}〜${e} ${note}</div>
-            <div style="margin-top:8px; display:flex; gap:8px; justify-content:flex-end;">
-              <button
-                data-cancel-id="${item.id}"
-                data-cancel-date="${ymd}"
-                data-cancel-start="${s}"
-                data-cancel-end="${e}"
-                style="padding:8px 10px; font-size:14px;">
-                キャンセル
-              </button>
-            </div>
-          </div>
-        `;
-      }).join("")}
-    </div>
-  `;
-
-  el.querySelectorAll("button[data-cancel-id]").forEach(btn=>{
-    btn.addEventListener("click", async ()=>{
-      const id = btn.getAttribute("data-cancel-id");
-      const dateText = btn.getAttribute("data-cancel-date");
-      const startText = btn.getAttribute("data-cancel-start");
-      const endText = btn.getAttribute("data-cancel-end");
-
-      const ok = await cancelReservation(id, carName, dateText, startText, endText);
-      if(ok) await loadEvents();
-    });
-  });
-}
-
-// メモを安全に表示する（既にあってもOK）
-function escapeHtml(str){
-  return (str ?? "")
-    .replaceAll("&","&amp;")
-    .replaceAll("<","&lt;")
-    .replaceAll(">","&gt;")
-    .replaceAll('"',"&quot;");
-}
-
   </div>
 
   <!-- 初回ログイン：名前入力モーダル -->
@@ -257,6 +190,14 @@ function escapeHtml(str){
   const TIMES = [...Array(96)].map((_,i)=>`${pad(Math.floor(i/4))}:${pad((i%4)*15)}`);
 
   function setStatus(text){ $("status").textContent = text; }
+
+  function escapeHtml(str){
+    return (str ?? "")
+      .replaceAll("&","&amp;")
+      .replaceAll("<","&lt;")
+      .replaceAll(">","&gt;")
+      .replaceAll('"',"&quot;");
+  }
 
   function toYmd(d){
     return `${d.getFullYear()}-${pad(d.getMonth()+1)}-${pad(d.getDate())}`;
@@ -455,7 +396,7 @@ function escapeHtml(str){
   async function createReservation(carId, startISO, endISO, note){
     const overlap = await hasOverlap(carId, startISO, endISO);
     if(overlap){
-      await showDialog("予約できません", "その時間帯はすでに予約があります。\n別の車両か時間を変更してください。");
+      await showDialog("予約できません", "その時間帯はすでに予約があります。別の車両か時間を変更してください。");
       return false;
     }
 
@@ -472,15 +413,13 @@ function escapeHtml(str){
     return true;
   }
 
-  // ★キャンセル確認：車名＋時間を表示
- async function cancelReservation(reservationId, carName, dateText, startText, endText){
-
-const msg =
-  `車：${carName}\n` +
-  `日付：${dateText}\n` +
-  `時間：${startText}〜${endText}\n` +
-  `\nこの予約を取り消します。よろしいですか？`;
-
+  // ★キャンセル確認：車名＋日付＋時間
+  async function cancelReservation(reservationId, carName, dateText, startText, endText){
+    const msg =
+      `車：${carName}\n` +
+      `日付：${dateText}\n` +
+      `時間：${startText}〜${endText}\n` +
+      `\nこの予約を取り消します。よろしいですか？`;
 
     const yes = await showConfirm("予約をキャンセルしますか？", msg, "キャンセルする", "やめる");
     if(!yes) return false;
@@ -498,6 +437,66 @@ const msg =
 
     await showDialog("キャンセルしました", "予約を取り消しました。");
     return true;
+  }
+
+  function fmtDateYmd(d){
+    return `${d.getFullYear()}-${String(d.getMonth()+1).padStart(2,"0")}-${String(d.getDate()).padStart(2,"0")}`;
+  }
+  function fmtTimeHM(d){
+    return `${String(d.getHours()).padStart(2,"0")}:${String(d.getMinutes()).padStart(2,"0")}`;
+  }
+
+  // ★自分の予約一覧（表示中期間）
+  function renderMyReservations(data){
+    const el = $("myListBody");
+    if(!el) return;
+
+    const mine = (data || [])
+      .filter(r => r.user_id === me.userId)
+      .map(r => ({
+        id: r.id,
+        start: new Date(r.start_time),
+        end: new Date(r.end_time),
+        note: (r.note || "").trim()
+      }))
+      .sort((a,b)=>a.start - b.start);
+
+    if(mine.length === 0){
+      el.textContent = "この期間の予約はありません。";
+      return;
+    }
+
+    const carName = getSelectedCarName();
+
+    el.innerHTML = `
+      <div style="display:flex; flex-direction:column; gap:8px;">
+        ${mine.map(item=>{
+          const ymd = fmtDateYmd(item.start);
+          const s = fmtTimeHM(item.start);
+          const e = fmtTimeHM(item.end);
+          const note = item.note ? `（${escapeHtml(item.note)}）` : "";
+          return `
+            <div class="myCard">
+              <div class="myCardTitle"><b>${ymd}</b> ${s}〜${e} ${note}</div>
+              <div class="myCardActions">
+                <button data-id="${item.id}" data-ymd="${ymd}" data-s="${s}" data-e="${e}">キャンセル</button>
+              </div>
+            </div>
+          `;
+        }).join("")}
+      </div>
+    `;
+
+    el.querySelectorAll("button[data-id]").forEach(btn=>{
+      btn.addEventListener("click", async ()=>{
+        const id = btn.getAttribute("data-id");
+        const ymd = btn.getAttribute("data-ymd");
+        const s = btn.getAttribute("data-s");
+        const e = btn.getAttribute("data-e");
+        const ok = await cancelReservation(id, carName, ymd, s, e);
+        if(ok) await loadEvents();
+      });
+    });
   }
 
   async function loadEvents(){
@@ -525,27 +524,25 @@ const msg =
 
     calendar.removeAllEvents();
 
-   data.forEach(r=>{
-  const isMine = (r.user_id === me.userId);
-  const title = isMine ? `（自分）${r.note ? r.note : ""}`.trim() : "";
+    data.forEach(r=>{
+      const isMine = (r.user_id === me.userId);
+      const title = isMine ? `（自分）${r.note ? r.note : ""}`.trim() : "";
 
-  calendar.addEvent({
-    id: r.id,
-    title,
-    start: new Date(r.start_time),
-    end: new Date(r.end_time),
-    classNames: isMine ? ["mine-event"] : ["busy-other"],
-    extendedProps: {
-      uid: r.user_id,
-      user_name: r.user_name
-    }
-  });
-});
+      calendar.addEvent({
+        id: r.id,
+        title,
+        start: new Date(r.start_time),
+        end: new Date(r.end_time),
+        classNames: isMine ? ["mine-event"] : ["busy-other"],
+        extendedProps: {
+          uid: r.user_id,
+          user_name: r.user_name
+        }
+      });
+    });
 
-// ★追加
-renderMyReservations(data);
-
-
+    // ★追加：カレンダー下に自分の予約一覧を表示
+    renderMyReservations(data);
   }
 
   function initCalendar(){
@@ -603,26 +600,16 @@ renderMyReservations(data);
         const end = info.event.end ? fmt(info.event.end) : "";
 
         if(isMine){
-  const carName = getSelectedCarName();
-
-  const d = info.event.start;
-  const dateText =
-    `${d.getFullYear()}-${String(d.getMonth()+1).padStart(2,"0")}-${String(d.getDate()).padStart(2,"0")}`;
-
-  const ok = await cancelReservation(
-    info.event.id,
-    carName,
-    dateText,
-    start,
-    end
-  );
-  if(ok) await loadEvents();
-  return;
-}
-
+          const carName = getSelectedCarName();
+          const d = info.event.start;
+          const dateText = `${d.getFullYear()}-${String(d.getMonth()+1).padStart(2,"0")}-${String(d.getDate()).padStart(2,"0")}`;
+          const ok = await cancelReservation(info.event.id, carName, dateText, start, end);
+          if(ok) await loadEvents();
+          return;
+        }
 
         const who = info.event.extendedProps.user_name || "不明";
-        await showDialog("予約済み", `利用者：${who}\n時間：${start}〜${end}`);
+        await showDialog("予約済み", `利用者：${who}　時間：${start}〜${end}`);
       }
     });
 
@@ -631,7 +618,7 @@ renderMyReservations(data);
 
   $("reloadBtn").addEventListener("click", loadEvents);
   $("car").addEventListener("change", loadEvents);
-  $("cancelModalBtn").addEventListener("click", ()=>{ $("overlay").style.display="none"; });
+  $("cancelModalBtn").addEventListener("click", closeReservationModal);
 
   $("saveModalBtn").addEventListener("click", async ()=>{
     try{
@@ -655,7 +642,7 @@ renderMyReservations(data);
 
       const ok = await createReservation(carId, startISO, endISO, $("note").value);
       if(ok){
-        $("overlay").style.display="none";
+        closeReservationModal();
         await loadEvents();
       }
     }catch(e){
@@ -710,5 +697,3 @@ renderMyReservations(data);
 </script>
 </body>
 </html>
-
-
