--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
   <div id="dlgOverlay" class="overlay">
     <div class="modal">
       <h3 id="dlgTitle">お知らせ</h3>
-      <div id="dlgMsg" style="margin-top:8px; white-space:normal;"></div>
+  <div id="dlgMsg" style="margin-top:8px; white-space:pre-wrap;"></div>
       <div class="actions" style="margin-top:12px;">
         <button id="dlgOkBtn">OK</button>
       </div>
